--- a/www/static/www/weavescope/index.html
+++ b/www/static/www/weavescope/index.html
@@ -2,12 +2,11 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Weave Scope</title>
+    <title>Rainbond应用拓扑图</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script language="javascript">window.__WEAVEWORKS_CSRF_TOKEN = "$__CSRF_TOKEN_PLACEHOLDER__";</script>
-  <script>window.__WEAVE_SCOPE_THEMES = JSON.parse('{"normal":"style-app-6b1a9496da583ff326d1.css?e8fa3c6c41c5dd73180c","contrast":"style-contrast-theme-15a5398e8e5488c8cfe5.css?e8fa3c6c41c5dd73180c","publicPath":""}')</script>
-  <link href="style-app-6b1a9496da583ff326d1.css?e8fa3c6c41c5dd73180c" rel="stylesheet"></head>
+  <link href="style-app-72f2cd470dfc651fa67e.css?d704893a639fe16e2809" rel="stylesheet"></head>
   <body>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -15,5 +14,5 @@
     <div class="wrap">
       <div id="app"></div>
     </div>
-  <script type="text/javascript" src="vendors.js?e8fa3c6c41c5dd73180c"></script><script type="text/javascript" src="app-6b1a9496da583ff326d1.js?e8fa3c6c41c5dd73180c"></script></body>
+  <script type="text/javascript" src="vendors.js?d704893a639fe16e2809"></script><script type="text/javascript" src="app-72f2cd470dfc651fa67e.js?d704893a639fe16e2809"></script></body>
 </html>
