--- a/www/static/www/weavescope-src/app/html/index.html
+++ b/www/static/www/weavescope-src/app/html/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Weave Scope</title>
+    <title>Rainbond应用拓扑图</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script language="javascript">window.__WEAVEWORKS_CSRF_TOKEN = "$__CSRF_TOKEN_PLACEHOLDER__";</script>
